ai기능 수정